--- a/2_1_tabei.html
+++ b/2_1_tabei.html
@@ -64,7 +64,7 @@
       <article>
 
 
-<img src="images/tabei.jpg"　alt="Sample site" /><p><p>
+<img src="images/person.jpg"　alt="Sample site" /><p><p>
 
 早稲田大学商学部卒業。東京音楽大学指揮科研究生修了、東京芸術大学指揮科卒業。<p>
 これまでに指揮法を遠藤雅古、神宮章、武藤英明、佐藤功太郎、ジェームズ・ロックハート、広上淳一、三石精一の各氏に、ピアノを岩津章子、秦はるひ、藤田雅の諸氏に師事。<p>
