--- a/2_2_sakuma.html
+++ b/2_2_sakuma.html
@@ -64,7 +64,7 @@
       <article>
 
 
-<img src="images/sakuma.jpg"　alt="Sample site" /><p><p>
+<img src="images/person.jpg"　alt="Sample site" /><p><p>
 
 山形市出身。幼少よりヴァイオリンを始め、桐朋学園子供のための音楽教室仙台分室を経て山形東高等学校から桐朋学園大学へ進む。<p>
 10代から演奏活動を始め、ソロ・室内楽はもとより、日本青少年オーケストラ、桐朋学園オーケストラにて早くからコンサートマスターとして活躍する。<p>
