--- a/2_3_yamashita.html
+++ b/2_3_yamashita.html
@@ -64,7 +64,7 @@
       <article>
 
 
-<img src="images/yamashita.jpg"　alt="Sample site" /><p><p>
+<img src="images/person.jpg"　alt="Sample site" /><p><p>
 
 1984年桐朋学園大学を卒業後、ベルリン芸術大学に留学、1986年デンマークで開かれたニコライ・マルコ国際指揮者コンクールで優勝。<p>
 1985年12月からカラヤンの亡くなるまで彼のアシスタントを務め、以後、デンマーク放送交響楽団などを指揮、着実にヨーロッパでの実績を重ね、1993年から1998年までヘルシンボリ交響楽団（スウェーデン）の首席客演指揮者を務めた。<p>
