--- a/2_4_omiya.html
+++ b/2_4_omiya.html
@@ -64,7 +64,7 @@
       <article>
 
 
-<img src="images/omiya.jpg"　alt="Sample site" /><p><p>
+<img src="images/person.jpg"　alt="Sample site" /><p><p>
 
 1981年横浜市生まれ。辰巳明子・堀 正文の両氏に師事。桐朋学園大学在学中にNHK交響楽団のオーディションに合格。2000年、第69回日本音楽コンクール3位。同年、ミレニアム・ニュークラシックオーディション1位並びに審査員特別賞。2001年第1回仙台国際音楽コンクールにおいて5位入賞、併せて聴衆者賞受賞。2002年フランスで行われたメニューイン国際ヴァイオリンコンクールで2位受賞、翌2003年にはプラハの春国際音楽コンクール（チェコ）でファイナリストとしてチェコフィルハーモニーと協演している。<p>
 <p>
