--- a/2_5_sakura.html
+++ b/2_5_sakura.html
@@ -64,7 +64,7 @@
       <article>
 
 
-<img src="images/sakura.jpg"　alt="Sample site" /><p><p>
+<img src="images/person.jpg"　alt="Sample site" /><p><p>
 
 さくらこまち和楽団は女性のみで構成され、日本の伝統的な楽器である箏、尺八、津軽三味線、和太鼓などを中心に、日本女性による魅力あふれる芸術・エンターティメントを創造する和楽団です。毎年のように海外公演を行い、世界中で活躍しています。<p>
 ２０１６年には日本イタリア国交１５０周年記念行事として、ミラノ・フィレンツェ・ナポリ・ボローニャ・ローマの５都市で公演、フィレンツェ市主催の記念演奏会には秋篠宮両殿下がご臨席の中演奏し、好評を博しました。<p>
