--- a/2_6_ishikawa.html
+++ b/2_6_ishikawa.html
@@ -64,7 +64,7 @@
       <article>
 
 
-<img src="images/ishikawa.jpg"　alt="Sample site" /><p><p>
+<img src="images/person.jpg"　alt="Sample site" /><p><p>
 
 1985年、東京都出身。東京藝術大学音楽学部指揮科、ロベルト・シューマン音楽大学デュッセルドルフ指揮科卒業。<p>
 <p>
