--- a/2_7_shiomi.html
+++ b/2_7_shiomi.html
@@ -64,7 +64,7 @@
       <article>
 
 
-<img src="images/shiomi.jpg"　alt="Sample site" /><p><p>
+<img src="images/person.jpg"　alt="Sample site" /><p><p>
 
 1972年、神奈川県生まれ。早稲田大学第一文学部卒業。<p>
 作曲は独学。コントラバスのためのソロ曲、室内楽曲など多数。吹奏楽作品や管弦楽作品も手がけている。フィルハーモニックアンサンブル管弦楽団に所属。<p>
