--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<title>2020 世界アマチュアオーケストラフェスティバル in Tokyo</title>
-<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 東京大会">
-<meta name="description" content="「2020 世界アマチュアオーケストラフェスティバル in Tokyo」（2020年6月開催）公式ホームページ">
+<title>2021 第49回全国アマチュアオーケストラフェスティバル 堺大会</title>
+<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 堺大会">
+<meta name="description" content="「2021 第49回全国アマチュアオーケストラフェスティバル 堺大会」（2021年8月開催）仮ホームページ">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
@@ -20,12 +20,13 @@
 <div id="wrapper">
 
   <header id="header">
-			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO東京実行委員会</h1>
+			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO堺大会実行委員会</h1>
       <!-- ロゴ -->
 		<div class="logo">
-			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site"><p> 2020 世界アマチュアオーケストラフェスティバル in Tokyo<span>（第48回全国アマチュアオーケストラフェスティバル東京大会）</span></p></a><br><br>
-			
+			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site"><p> 第49回全国アマチュアオーケストラフェスティバル堺大会<span></span></p></a><br><br>
+<!--			
 <font color="#ff0000">　（新型コロナウィルスの感染拡大の状況を鑑み、開催は中止となりました）</font>
+-->			
 		</div>
 
 	</header>
