--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 	<div id="mainBanner">
 		<img src="images/main_1.jpg" alt="">
     <div class="slogan">
-			<h2>2020年6月5日(金)～7日(日)</h2>
-			<p>会　場：東京芸術劇場<br>演奏会：2020年6月7日(日)　13：20 開演（予定）</p>
+			<h2>2021年8月27日(金)～29日(日)</h2>
+			<p>会　場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)　13：20 開演（予定）</p>
 		</div>
 	</div>
 	<!-- / メイン画像 -->
