--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<title>2021 第49回全国アマチュアオーケストラフェスティバル 堺大会</title>
+<title>第49回全国アマチュアオーケストラフェスティバル 堺大会</title>
 <meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 堺大会">
-<meta name="description" content="「2021 第49回全国アマチュアオーケストラフェスティバル 堺大会」（2021年8月開催）仮ホームページ">
+<meta name="description" content="「第49回全国アマチュアオーケストラフェスティバル 堺大会」（2021年8月開催）仮ホームページ">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
@@ -23,7 +23,7 @@
 			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO堺大会実行委員会</h1>
       <!-- ロゴ -->
 		<div class="logo">
-			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site"><p> 第49回全国アマチュアオーケストラフェスティバル堺大会<span></span></p></a><br><br>
+			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site"><p> 第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a><br><br>
 <!--			
 <font color="#ff0000">　（新型コロナウィルスの感染拡大の状況を鑑み、開催は中止となりました）</font>
 -->			
@@ -67,14 +67,8 @@
 
 <br><br>
 
-<font color="#ff0000">《払い戻しのお知らせ》</font>
+<font color="#ff0000">《チケット発売のお知らせ》</font>
 <br><br>
-
-【払い戻し受付期間】<br>
-　2020年4月12日（日）～ 7月31日（金）<br><br>
-【払い戻し方法】<br>
-　購入された各プレイガイドに<br>
-　お問い合わせください。<br>
 <br>
 キョードー東京<br>
 　<a href="https://www.kyodotokyo.com/">https://www.kyodotokyo.com/</a>
@@ -91,14 +85,10 @@
 CNプレイガイド<br>
 　<a href="https://www.cnplayguide.com/">https://www.cnplayguide.com/</a>
 <br>
-東京芸術劇場ボックスオフィス<br>
-　<a href="http://tmt.pia.jp/guide/refund.jsp">http://tmt.pia.jp/guide/refund.jsp</a>
+フェニーチェ堺<br>
+　<a href="https://www.fenice-sacay.jp/ticket/ticket-guide/">https://www.fenice-sacay.jp/ticket/ticket-guide/</a>
 <br>
-窓口・お電話でご購入のお客様は下記にお問合せください。<br>
-0570-010-296　（休館日・臨時休館日を除く 10:00～19:00）<br>
-<br>
-払い戻しはお買い上げいただいたプレイガイドでの手続きをお願い申し上げます。<br>
-ご迷惑をおかけいたしますが、何卒ご理解のほどよろしくお願いいたします。<br>
+
 <br>
 
 
@@ -106,23 +96,21 @@ CNプレイガイド<br>
 		</article>
 
 
-2020世界アマチュアオーケストラフェスティバルin Tokyo<br>
-第48回全国アマチュアオーケストラフェスティバル東京大会<br>
+第49回全国アマチュアオーケストラフェスティバル堺大会<br>
 <br>
-<font color="#ff0000">【開催の中止について】</font>
+<font color="#ff0000">【 Welcome to JAO 2021 Sacay 】</font>
 <br><br>
-拝啓　陽春の候、皆様方におかれましては日々ご健勝のこととお喜び申し上げます。<br>
-　さて、公益社団法人日本アマチュアオーケストラ連盟（JAO）及びJAO東京大会実行委員会は、６月初旬のフェスティバル開催に向け準備を進めて参りましたが、新型コロナウィルスの感染拡大の状況を鑑み、大会の中止を決定致しました。<br>
-　これまで大会の趣旨にご賛同頂き、多くの方にご協力、ご支援を頂いていたにもかかわらず、大変残念な結果となり、心よりお詫び申し上げるとともに、ご理解を賜りますようお願い申し上げます。<br>
-　なお、既にチケットを購入された方々に払い戻しの方法につきましては、ご購入いただいたプレイガイドにて、それぞれ準備をしています。しかしながら、現在多くの公演が中止されていることから受付開始が遅れる見込みとなっております。順次受付がなされますので、大変恐れ入りますが、各プレイガイドのご案内をご覧いただきます様、宜しくお願いいたします。<br>
-　最後に、新型コロナウィルスの一日も早い終息を祈念するとともに、皆様のご健康とご活躍をお祈り申し上げます。　　　敬具<br>
+第48回東京大会は、新型コロナ禍により中止となりました。準備されていた皆さんには心から感謝と敬意を表します。<br>
+オーケストラをはじめとする音楽文化は決して不要不急ではありませんが、生活のモチベーションを上げる大きな力になっています。<br>
+この歴史的な自粛生活から立ち直り、全国の仲間とオーケストラ音楽を共有する喜びを堺で終結したいと思います。<br>
+２つのオケで計５曲のプログラムは、特に管楽器のシートを増やすことができます。<br>
+今まで参加されていない方にも、ぜひご応募をお待ちしております。<br>
 <br>
 公益社団法人 日本アマチュアオーケストラ連盟<br>
 　理事長　下谷 剛嗣<br>
 <br>
-2020世界アマチュアオーケストラフェスティバルin Tokyo<br>
-第48回全国アマチュアオーケストラフェスティバル東京大会実行委員会<br>
-　実行委員長　下里猛雅<br>
+第49回全国アマチュアオーケストラフェスティバル堺大会実行委員会<br>
+　実行委員長　佐村木 正和<br>
 <br>
 <br>
 <br>
