--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 		<article class="grid">
       <div class="box">
 
-
+　　　　　　　<!--
 	<a href="https://www.facebook.com/JAO2020TOKYO/"><img src="images/facebook_rogo_TOKYO2020.jpg" width="260" height="113" alt=""></a>
-
+　　　　　　　-->
 <br><br>
 
 <font color="#ff0000">《チケット発売のお知らせ》</font>
-<br><br>
+<br>
 <br>
 キョードー東京<br>
 　<a href="https://www.kyodotokyo.com/">https://www.kyodotokyo.com/</a>
@@ -100,10 +100,10 @@ CNプレイガイド<br>
 <br>
 <font color="#ff0000">【 Welcome to JAO 2021 Sacay 】</font>
 <br><br>
-第48回東京大会は、新型コロナ禍により中止となりました。準備されていた皆さんには心から感謝と敬意を表します。<br>
-オーケストラをはじめとする音楽文化は決して不要不急ではありませんが、生活のモチベーションを上げる大きな力になっています。<br>
-この歴史的な自粛生活から立ち直り、全国の仲間とオーケストラ音楽を共有する喜びを堺で終結したいと思います。<br>
-２つのオケで計５曲のプログラムは、特に管楽器のシートを増やすことができます。<br>
+第48回東京大会は、新型コロナ禍により中止となりました。準備されていた皆さんには心から感謝と敬意を表します。
+オーケストラをはじめとする音楽文化は決して不要不急ではありませんが、生活のモチベーションを上げる大きな力になっています。
+この歴史的な自粛生活から立ち直り、全国の仲間とオーケストラ音楽を共有する喜びを堺で終結したいと思います。
+２つのオケで計５曲のプログラムは、特に管楽器のシートを増やすことができます。
 今まで参加されていない方にも、ぜひご応募をお待ちしております。<br>
 <br>
 公益社団法人 日本アマチュアオーケストラ連盟<br>
