--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ CNプレイガイド<br>
 <br><br>
 第48回東京大会は、新型コロナ禍により中止となりました。準備されていた皆さんには心から感謝と敬意を表します。
 オーケストラをはじめとする音楽文化は決して不要不急ではありませんが、生活のモチベーションを上げる大きな力になっています。
-この歴史的な自粛生活から立ち直り、全国の仲間とオーケストラ音楽を共有する喜びを堺で終結したいと思います。
+この歴史的な自粛生活から立ち直り、全国の仲間とオーケストラ音楽を共有する喜びを堺で結集したいと思います。
 ２つのオケで計５曲のプログラムは、特に管楽器のシートを増やすことができます。
 今まで参加されていない方にも、ぜひご応募をお待ちしております。<br>
 <br>
