--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ CNプレイガイド<br>
 
 第49回全国アマチュアオーケストラフェスティバル堺大会<br>
 <br>
+<font size="+2" color="#ff0000">準備中</font>
+<br>
 <font color="#ff0000">【 Welcome to JAO 2021 Sacay 】</font>
 <br><br>
 第48回東京大会は、新型コロナ禍により中止となりました。準備されていた皆さんには心から感謝と敬意を表します。
