--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ CNプレイガイド<br>
 
 第49回全国アマチュアオーケストラフェスティバル堺大会<br>
 <br>
-<font size=5 color="#ff0000">　　　　　　　　準備中</font>
+<font size=5 color="#ff0000">　　　　　　　　準備中です</font><br>
 <br>
 <font color="#ff0000">【 Welcome to JAO 2021 Sacay 】</font>
 <br><br>
