--- a/1.html
+++ b/1.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<title>2020 世界アマチュアオーケストラフェスティバル in Tokyo</title>
-<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 東京大会">
-<meta name="description" content="「2020 世界アマチュアオーケストラフェスティバル in Tokyo」（2020年6月開催）公式ホームページ">
+<title>第49回全国アマチュアオーケストラフェスティバル堺大会</title>
+<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 堺大会">
+<meta name="description" content="「第49回全国アマチュアオーケストラフェスティバル堺大会」（2021年8月開催）仮ホームページ">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
@@ -20,10 +20,10 @@
 <div id="wrapper">
 
   <header id="header">
-			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO東京実行委員会</h1>
+			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO堺大会実行委員会</h1>
       <!-- ロゴ -->
 		<div class="logo">
-			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p> 2020 世界アマチュアオーケストラフェスティバル in Tokyo<span>（第48回全国アマチュアオーケストラフェスティバル東京大会）</span></p></a>
+			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p>第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a>
 		</div>
 
 
@@ -52,8 +52,8 @@
 		<div id="mainBanner">
 			<img src="images/main_2.jpg" width="952" height="140" alt="">
     	<div class="slogan">
-				<h2>2020年6月5日(金)～7日(日)</h2>
-				<p>会場：東京芸術劇場　演奏会：2020年6月7日(日)</p>
+				<h2>2021年8月27日(金)～29日(日)</h2>
+				<p>会場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)</p>
 			</div>
 		</div>
 		<!-- / メイン画像 -->
@@ -92,10 +92,9 @@
 
 
     <section class="content">
-    	<h3 class="heading">「2020 世界アマチュアオーケストラフェスティバル in Tokyo」 大会コンセプト</h3>
+    	<h3 class="heading">「第49回全国アマチュアオーケストラフェスティバル堺大会」 大会コンセプト</h3>
       <article>
-			<p>　2020年東京でのオリンピック・パラリンピックをきっかけとし、様々な国や各地域の人々、文化・音楽が集まる東京において、日本の伝統文化を認識したうえで、世界の人々、健常者、障がい者が手を取り合い、未来に向けて、東京の多様性（ダイバーシティ）を発信します。<br>
-　世界各地２０か国から文化芸術の愛好者や文化の担い手が東京に集まり、日本文化の伝統を体験し、日本の多様かつ活発な文化芸術活動を知ることにより、国際的な文化の在り方を考え、未来につながる国際文化交流の実現を目指しています。
+			<p>　特にありません。
 
 </p>
     	</article>
