--- a/1.html
+++ b/1.html
@@ -53,7 +53,7 @@
 			<img src="images/main_2.jpg" width="952" height="140" alt="">
     	<div class="slogan">
 				<h2>2021年8月27日(金)～29日(日)</h2>
-				<p>会場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)</p>
+				<p>会　場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)　13：20 開演（予定）</p>
 			</div>
 		</div>
 		<!-- / メイン画像 -->
