--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ CNプレイガイド<br>
 　<a href="https://www.cnplayguide.com/">https://www.cnplayguide.com/</a>
 <br>
 フェニーチェ堺<br>
-　<a href="https://www.fenice-sacay.jp/ticket/ticket-guide/">https://www.fenice-sacay.jp/ticket/ticket-guide/</a>
+　<a href="https://www.fenice-sacay.jp/">https://www.fenice-sacay.jp/</a>
 <br>
 
 <br>
