--- a/1.html
+++ b/1.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<title>第49回全国アマチュアオーケストラフェスティバル堺大会</title>
+<title>第49回全国アマチュアオーケストラフェスティバル 堺大会</title>
 <meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 堺大会">
-<meta name="description" content="「第49回全国アマチュアオーケストラフェスティバル堺大会」（2021年8月開催）仮ホームページ">
+<meta name="description" content="「第49回全国アマチュアオーケストラフェスティバル 堺大会」（2021年8月開催）仮ホームページ">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
@@ -53,7 +53,7 @@
 			<img src="images/main_2.jpg" width="952" height="140" alt="">
     	<div class="slogan">
 				<h2>2021年8月27日(金)～29日(日)</h2>
-				<p>会　場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)　13：20 開演（予定）</p>
+				<p>会　場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)　13：20 開演(予定)</p>
 			</div>
 		</div>
 		<!-- / メイン画像 -->
