--- a/2.html
+++ b/2.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<title>2020 世界アマチュアオーケストラフェスティバル in Tokyo</title>
-<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 東京大会">
-<meta name="description" content="「2020 世界アマチュアオーケストラフェスティバル in Tokyo」（2020年6月開催）公式ホームページ">
+<title>第49回全国アマチュアオーケストラフェスティバル 堺大会</title>
+<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 堺大会">
+<meta name="description" content="「第49回全国アマチュアオーケストラフェスティバル 堺大会」（2021年8月開催）仮ホームページ">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
-<script src="js/css3-mediaqueries.js"></script>
+<script src="js/css3-mediaqueries.js"></script>堺大会
 <![endif]-->
 <script src="js/jquery1.7.2.min.js"></script>
 <script src="js/script.js"></script>
@@ -20,10 +20,10 @@
 <div id="wrapper">
 
   <header id="header">
-			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO東京実行委員会</h1>
+			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO堺大会実行委員会</h1>
       <!-- ロゴ -->
 		<div class="logo">
-			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p> 2020 世界アマチュアオーケストラフェスティバル in Tokyo<span>（第48回全国アマチュアオーケストラフェスティバル東京大会）</span></p></a>
+			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p> 第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a>
 		</div>
 
 
@@ -52,20 +52,18 @@
 		<div id="mainBanner">
 			<img src="images/main_2.jpg" width="952" height="140" alt="">
     	<div class="slogan">
-				<h2>2020年6月5日(金)～7日(日)</h2>
-				<p>会場：東京芸術劇場　演奏会：2020年6月7日(日)</p>
+				<h2>2021年8月27日(金)～29日(日)</h2>
+				<p>会　場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)　13：20 開演(予定)</p>
 			</div>
 		</div>
 		<!-- / メイン画像 -->
     
 
     <section class="content">
-    	<h3 class="heading">「2020 世界アマチュアオーケストラフェスティバル in Tokyo」 大会概要</h3>
+    	<h3 class="heading">「第49回全国アマチュアオーケストラフェスティバル 堺大会」 大会概要</h3>
       <article>
 			<p>
-"2020 World Amateur Orchestra Festival in Tokyo" <br>
-2020世界アマチュアオーケストラフェスティバルin Tokyo<br>
-（第48回全国アマチュアオーケストラフェスティバル東京大会）<br>
+第49回全国アマチュアオーケストラフェスティバル 堺大会<br>
 <br><br>
 
 <a href="2_ticket.html">◆チケット発売中！【チケット情報ページはこちらから】</a>
@@ -83,34 +81,32 @@
 
 
 <br><br><br><br>
-日　時：2020（令和２）年６月５日（金）～７日（日）<br>
+日　時：2021（令和３）年7月27日（金）～29日（日）<br>
 会　場：東京芸術劇場<br>
 演奏会：2020（令和２）年６月７日（日）13：30開演（13：00開場）<br>
-　　　　　東京芸術劇場コンサートホール<br>
+　　　　　堺市民芸術文化ホール　フェニーチェ堺<br>
 <br>
 【オーケストラＡ】<br>
-　指揮：<a href="2_1_tabei.html">田部井　剛</a><br>
-　コンサートマスター：<a href="2_2_sakuma.html">佐久間　聡一</a>（広島交響楽団第１コンサートマスター）<br>
-　曲目：D.ショスタコーヴィチ　『祝典序曲』<br>
-　　　　　L.ヤナーチェク　『シンフォニエッタ』<br>
+　指揮：<a href="2_1_tabei.html">寺岡　清高</a><br>
+　コンサートマスター：<a href="2_2_sakuma.html">森下　幸路</a>（大阪交響楽団）<br>
+　曲目：J.シュトラウスⅡ　『喜歌劇「こうもり」序曲』<br>
+　　　　　ブラームス　『交響曲第5番　ホ短調　作品98』<br>
 <br>
 【オーケストラＢ】<br>
-　指揮：<a href="2_3_yamashita.html">山下　一史</a><br>
-　コンサートマスター：<a href="2_4_omiya.html">大宮　臨太郎</a>（NHK交響楽団フォアシュピーラー）<br>
-　曲目：G.マーラー　『交響曲第5番　嬰ハ短調（2002年版）』<br>
+　指揮：<a href="2_3_yamashita.html">井﨑　正浩</a><br>
+　コンサートマスター：<a href="2_4_omiya.html">森田　昌弘</a>（NHK交響楽団）<br>
+　曲目：レスピーギ　『ローマの松』　『ローマの噴水』　『ローマの祭』<br>
 <br>
-【オーケストラＴ】「ＪＡＯ東京オーケストラ」<br>
-　指揮：<a href="2_6_ishikawa.html">石川　星太郎</a><br>
-　コンサートマスター：佐久間　聡一（広島交響楽団第１コンサートマスター）<br>
-　曲目：<a href="2_7_shiomi.html">塩見　康史　『シンフォニエッタ《ミレニアム・プレリュード》』</a>（委嘱作品）<br>
-<br>
-【特別出演：<a href="2_5_sakura.html">さくらこまち和楽団</a>】（一社）日本伝統芸能国際交流協会<br>
 <br>
 
-【JAO東京実行委員会加盟団体（以下五十音順）】<br>
-　アンサンブル・グリューネ、俊友会管弦楽団、八王子フィルハーモニー管弦楽団<br>
-　フィルハーモニックアンサンブル管弦楽団、丸の内交響楽団、<br>
-　モーツァルトアンサンブルオーケストラ、ワグネル・ソサィエティー・OBオーケストラ<br>
+【第49回全国アマチュアオーケストラフェスティバル 堺大会実行委員会　加盟団体】<br>
+　堺フィルハーモニー交響楽団（主管）<br>
+　大阪市民管弦楽団<br>
+　大阪府医師会フィルハーモニー<br>
+　関西シティーフィルハーモニー交響楽団<br>
+　交野シティー・フィルハーモニック<br>
+　近畿フィルハーモニー管弦楽団<br>
+　吹田市交響楽団<br>
 
 
 
