--- a/2.html
+++ b/2.html
@@ -84,7 +84,7 @@
 日　時：2021（令和３）年7月27日（金）～29日（日）<br>
 会　場：堺市民芸術文化ホール　フェニーチェ堺<br>
 演奏会：2021（令和３）年7月29日（日）13：30開演（13：00開場）<br>
-　　　　　堺市民芸術文化ホール　フェニーチェ堺<br>
+　　　　　堺市民芸術文化ホール　フェニーチェ堺　大ホール<br>
 <br>
 【オーケストラＡ】<br>
 　指揮：<a href="2_1_tabei.html">寺岡　清高</a><br>
