--- a/2.html
+++ b/2.html
@@ -76,7 +76,7 @@
 <img src="images/chirashi_2.jpg" alt="サンプル" width="420" height="600">
 
 <br>
-<a href="file/festival_tokyo2020.pdf">◆チラシのPDFデータはこちらからダウンロードできます</a><a href="file/festival_tokyo2020.pdf"><img src="images/pdf.gif"></a>
+<a href="file/festival_sacay2021.pdf">◆チラシのPDFデータはこちらからダウンロードできます</a><a href="file/festival_sacay2021.pdf"><img src="images/pdf.gif"></a>
 
 
 
