--- a/3.html
+++ b/3.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<title>2020 世界アマチュアオーケストラフェスティバル in Tokyo</title>
-<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 東京大会">
-<meta name="description" content="「2020 世界アマチュアオーケストラフェスティバル in Tokyo」（2020年6月開催）公式ホームページ">
+<title>第49回全国アマチュアオーケストラフェスティバル 堺大会</title>
+<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 堺大会">
+<meta name="description" content="「第49回全国アマチュアオーケストラフェスティバル 堺大会」（2021年8月開催）仮ホームページ">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
@@ -20,10 +20,10 @@
 <div id="wrapper">
 
   <header id="header">
-			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO東京実行委員会</h1>
+			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO堺大会実行委員会</h1>
       <!-- ロゴ -->
 		<div class="logo">
-			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p> 2020 世界アマチュアオーケストラフェスティバル in Tokyo<span>（第48回全国アマチュアオーケストラフェスティバル東京大会）</span></p></a>
+			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p> 第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a>
 		</div>
 
 
@@ -52,8 +52,8 @@
 		<div id="mainBanner">
 			<img src="images/main_2.jpg" width="952" height="140" alt="">
     	<div class="slogan">
-				<h2>2020年6月5日(金)～7日(日)</h2>
-				<p>会場：東京芸術劇場　演奏会：2020年6月7日(日)</p>
+				<h2>2021年8月27日(金)～29日(日)</h2>
+				<p>会　場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)　13：20 開演(予定)</p>
 			</div>
 		</div>
 		<!-- / メイン画像 -->
@@ -66,46 +66,13 @@
 			
 
 
-【第2次募集のお知らせ　2020年3月25日版】<br>
+特にありません。<br>
+<br><br>
 <br>
-皆　様<br>
-先日、東京大会の選考結果を、各団代表の皆様にメールでお送りしたところ、それを受け、キャンセル、辞退等のご連絡も受けております。<br>
-つきましては、以下のパートで欠員が出て、参加者を再募集することとなりましたので、どうぞよろしくお願いいたします。<br>
-<br>
-皆様の周囲で広く、適任の方にお声かけいただけますれば幸いでございます。<br>
-ご連絡先：末尾に記載しています<br>
-<br>
-－－－－－　募集内容　－－－－－<br>
-<br>
-【オーケストラＡ】<br>
-①ファゴット　1番アシスタント 1名<br>
-<br>
-②トランペット<br>
-　　　　　１番 アシスタント・トランペット<br>
- 　　　　　3番 バンダトランペット <br>
-<br>
-ヤナーチェクのみ　4番 バンダトランペット <br>
-　　　　　　　　　5番 バンダトランペット <br>
-　　　　　　　　　6番 バンダトランペット <br>
-　　　　　　　　　7番 バンダトランペット <br>
-　　　　　　　　　8番 バンダトランペット <br>
-　　　　　　　　　9番 バンダトランペット<br>
-<br>
-③ホルン　3名（2曲正副入れ替え）＋バンダ ３名<br>
-<br>
-<br>
-【オーケストラＢ（マーラー5番）】<br>
-<br>
-①クラリネット 1番 アシスタント1名<br>
-<br>
-②パーカッション （スネア/トライアングル） 1名<br>
-<br>
-このほか、在京メンバーを中心とする「オーケストラT（委嘱作品）」の弦楽器各パートを追加で募集いたします。<br>
-<br>
-ご興味ある方には参加要項をお送りいたしますので、下記問い合わせ先までお知らせください。<br>
-<br>
-JAO東京大会実行委員会<br>
+JAO堺大会実行委員会<br>
+<!--
 <a href="mailto:jaotokyo@googlegroups.com">jaotokyo@googlegroups.com</a><br>
+-->
 
 
 
