--- a/2.html
+++ b/2.html
@@ -87,14 +87,14 @@
 　　　　　堺市民芸術文化ホール　フェニーチェ堺　大ホール<br>
 <br>
 【オーケストラＡ】<br>
-　指揮：<a href="2_1_tabei.html">寺岡　清高</a><br>
-　コンサートマスター：<a href="2_2_sakuma.html">森下　幸路</a>（大阪交響楽団）<br>
+　指揮：<a href="2_1_teraoka.html">寺岡　清高</a><br>
+　コンサートマスター：<a href="2_2_morishita.html">森下　幸路</a>（大阪交響楽団）<br>
 　曲目：J.シュトラウスⅡ　『喜歌劇「こうもり」序曲』<br>
 　　　　ブラームス　『交響曲第5番　ホ短調　作品98』<br>
 <br>
 【オーケストラＢ】<br>
-　指揮：<a href="2_3_yamashita.html">井﨑　正浩</a><br>
-　コンサートマスター：<a href="2_4_omiya.html">森田　昌弘</a>（NHK交響楽団）<br>
+　指揮：<a href="2_3_izaki.html">井﨑　正浩</a><br>
+　コンサートマスター：<a href="2_4_morita.html">森田　昌弘</a>（NHK交響楽団）<br>
 　曲目：レスピーギ　『ローマの松』　『ローマの噴水』　『ローマの祭』<br>
 <br>
 <br>
