--- a/2_ticket.html
+++ b/2_ticket.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<title>2020 世界アマチュアオーケストラフェスティバル in Tokyo</title>
-<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 東京大会">
-<meta name="description" content="「2020 世界アマチュアオーケストラフェスティバル in Tokyo」（2020年6月開催）公式ホームページ">
+<title>第49回全国アマチュアオーケストラフェスティバル 堺大会</title>
+<meta name="keywords" content="JAO, amateur orchestra, アマチュアオーケストラ, アマオケ, 堺大会">
+<meta name="description" content="「第49回全国アマチュアオーケストラフェスティバル 堺大会」（2021年8月開催）仮ホームページ">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
@@ -20,10 +20,10 @@
 <div id="wrapper">
 
   <header id="header">
-			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO東京実行委員会</h1>
+			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO堺大会実行委員会</h1>
       <!-- ロゴ -->
 		<div class="logo">
-			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p> 2020 世界アマチュアオーケストラフェスティバル in Tokyo<span>（第48回全国アマチュアオーケストラフェスティバル東京大会）</span></p></a>
+			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p> 第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a>
 		</div>
 
 
@@ -52,15 +52,15 @@
 		<div id="mainBanner">
 			<img src="images/main_2.jpg" width="952" height="140" alt="">
     	<div class="slogan">
-				<h2>2020年6月5日(金)～7日(日)</h2>
-				<p>会場：東京芸術劇場　演奏会：2020年6月7日(日)</p>
+				<h2>2021年8月27日(金)～29日(日)</h2>
+				<p>会　場：堺市民芸術文化ホール　フェニーチェ堺<br>演奏会：2020年8月29日(日)　13：20 開演(予定)</p>
 			</div>
 		</div>
 		<!-- / メイン画像 -->
     
 
     <section class="content">
-    	<h3 class="heading">「2020 世界アマチュアオーケストラフェスティバル in Tokyo」 チケット情報</h3>
+    	<h3 class="heading">「第49回全国アマチュアオーケストラフェスティバル 堺大会」 チケット情報</h3>
       <article>
 			<p>
 
@@ -107,16 +107,8 @@
 <br>
 --------------------------------------------------<br>
 
-◆東京芸術劇場　ボックスオフィス<br>
-（休館日を除く 10:00～19:00）<br>
-0570-010-296<br>
-<a href="http://www.geigeki.jp/t/">http://www.geigeki.jp/t/</a>
-<br><br>
-Tokyo Metropolitan Theater Box Office<br>
-Phone: 0570-010-296<br>
-(10:00am to 7:00pm except on Closed days)<br>
-<a href="http://www.geigeki.jp/t/">http://www.geigeki.jp/t/</a>
-
+◆フェニーチェ堺<br>
+<a href="https://www.fenice-sacay.jp/">https://www.fenice-sacay.jp/</a>
 <br>
 --------------------------------------------------<br>
 <br>
@@ -134,7 +126,7 @@ Phone: 0570-010-296<br>
 
 <br>
 
-<a href="file/festival_tokyo2020.pdf">◆チラシのPDFデータはこちらからダウンロードできます</a><a href="file/festival_tokyo2020.pdf"><img src="images/pdf.gif"></a>
+<a href="file/festival_sacay2021.pdf">◆チラシのPDFデータはこちらからダウンロードできます</a><a href="file/festival_sacay2021.pdf"><img src="images/pdf.gif"></a>
 
 
 <br>
