--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <!-- ロゴ -->
 		<div class="logo">
 			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site"><p> 第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a><br><br>
-<!--			
-<font color="#ff0000">　（新型コロナウィルスの感染拡大の状況を鑑み、開催は中止となりました）</font>
--->			
+			
+<font color="#ff0000">　（ただいまサイト準備中です）</font>
+			
 		</div>
 
 	</header>
@@ -104,8 +104,6 @@ CNプレイガイド<br>
 
 
 第49回全国アマチュアオーケストラフェスティバル堺大会<br>
-<br>
-<font size="+4" color="#ff0000">　　　　　　　　準備中です</font><br>
 <br>
 <font color="#ff0000">【 Welcome to JAO 2021 Sacay 】</font>
 <br><br>
