--- a/1.html
+++ b/1.html
@@ -23,7 +23,7 @@
 			<h1>主催：公益社団法人 日本アマチュアオーケストラ連盟、JAO堺大会実行委員会</h1>
       <!-- ロゴ -->
 		<div class="logo">
-			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p>第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a>
+			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p>第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a><br><br>
 
 		<font color="#ff0000">　（ただいまサイト準備中です）</font>
 		</div>
