--- a/1.html
+++ b/1.html
@@ -25,7 +25,7 @@
 		<div class="logo">
 			<a href="index.html"><img src="images/jao_rogo.png" width="60" height="60" alt="Sample site" /><p>第49回 全国アマチュア オーケストラ フェスティバル 堺大会<span></span></p></a><br><br>
 
-		<font color="#ff0000">　（ただいまサイト準備中です）</font>
+		<font color="#ff0000">ただいまサイト準備中です</font>
 		</div>
 
 
